@@ -1,3 +1,8 @@
+2009-01-26  Jason Merrill  <jason@redhat.com>
+
+	PR c++/23287
+	* g++.dg/template/dtor5.C: New test.
+
 2009-01-26  H.J. Lu  <hongjiu.lu@intel.com>
 
 	Backport from mainline:
