@@ -1,3 +1,10 @@
+2009-01-26  Jason Merrill  <jason@redhat.com>
+
+	PR c++/23287
+	* parser.c (cp_parser_unqualified_id): In a template,
+	accept ~identifier.
+	* typeck.c (lookup_destructor): Handle IDENTIFIER_NODE.
+
 2009-01-24  Release Manager
 
 	* GCC 4.3.3 released.
